# lab_riddle_server

./: database.sqlite  pyproject.toml
app/: models.py  views.py
app/migrations/: 0001_initial.py
